--- a/DataAnalyze/price_mine_zhu.html
+++ b/DataAnalyze/price_mine_zhu.html
@@ -29,12 +29,12 @@
 </script>
 </head>
 <body>
-    <div id="60b67b131a194323bbb55a907c079f0a" style="width:800px;height:400px;"></div>
+    <div id="88c3efec9a624a26b71af1e30a5c3055" style="width:800px;height:400px;"></div>
     <script type="text/javascript">
 
-var myChart_60b67b131a194323bbb55a907c079f0a = echarts.init(document.getElementById('60b67b131a194323bbb55a907c079f0a'), 'light', {renderer: 'canvas'});
+var myChart_88c3efec9a624a26b71af1e30a5c3055 = echarts.init(document.getElementById('88c3efec9a624a26b71af1e30a5c3055'), 'light', {renderer: 'canvas'});
 
-var option_60b67b131a194323bbb55a907c079f0a = {
+var option_88c3efec9a624a26b71af1e30a5c3055 = {
     "title": [
         {
             "text": "\u5404\u57ce\u5e02\u603b\u4e1a\u52a1\u7684\u5e73\u5747\u4ef7\u683c",
@@ -68,7 +68,7 @@ var option_60b67b131a194323bbb55a907c079f0a = {
             }
         }
     },
-    "series_id": 824025,
+    "series_id": 8658158,
     "tooltip": {
         "trigger": "item",
         "triggerOn": "mousemove|click",
@@ -482,7 +482,7 @@ var option_60b67b131a194323bbb55a907c079f0a = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 824025
+            "seriesId": 8658158
         }
     ],
     "legend": [
@@ -977,7 +977,7 @@ var option_60b67b131a194323bbb55a907c079f0a = {
         }
     ]
 };
-myChart_60b67b131a194323bbb55a907c079f0a.setOption(option_60b67b131a194323bbb55a907c079f0a);
+myChart_88c3efec9a624a26b71af1e30a5c3055.setOption(option_88c3efec9a624a26b71af1e30a5c3055);
 
 </script>
 </body>
